--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "@danielkalen/notices-engine",
+  "name": "@danielkalen/subnotices-engine",
   "version": "2.3.0",
   "description": "A simple notice and subnotice display system",
-  "main": "dist/js/notices.js",
+  "main": "dist/subnotices.js",
+  "repository": "https://github.com/danielkalen/subnotices-engine",
   "author": "danielkalen",
   "license": "MIT",
   "scripts": {
     "postversion": "echo \\'$(json -f package.json version)\\' > .version.coffee && npm run build",
     "build": "npm run compile && npm run minify",
-    "compile": "npm run compile:notices && npm run compile:subnotices",
-    "compile:notices": "simplyimport -i src/notices.coffee | coffee -c -s -b > dist/js/notices.js",
-    "compile:subnotices": "simplyimport -i src/subnotices.coffee | coffee -c -s -b > dist/js/subnotices.js",
-    "minify": "closure-service dist/js/notices.js > dist/js/notices.min.js && closure-service dist/js/subnotices.js > dist/js/subnotices.min.js",
+    "compile": "simplyimport -i src/subnotices.coffee | coffee -c -s -b > dist/subnotices.js",
+    "minify": "closure-service dist/subnotices.js > dist/subnotices.min.js",
     "watch": "simplywatch -g 'src/*' -x 'npm run compile -s'"
   },
   "devDependencies": {
@@ -22,6 +21,6 @@
     "uglify": "*"
   },
   "dependencies": {
-    "jquery.transit": "^0.9.12"
+    "jquery": "^3.1.1"
   }
 }
