--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "closure-compiler-service": "^0.5.0",
     "coffee-script": "^1.10.0",
+    "json": "^9.0.4",
     "simplyimport": "*",
     "simplywatch": "*",
     "uglify": "*"
