--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "author": "danielkalen",
   "license": "MIT",
   "scripts": {
-    "postversion": "echo \\'$(json -f package.json version)\\' > .version.coffee && npm run build",
+    "postversion": "npm run build && git add . && git commit -m '[Build]'",
+    "postpublish": "git push",
     "build": "npm run compile && npm run minify",
-    "compile": "simplyimport -i src/subnotices.coffee | coffee -c -s -b > dist/subnotices.js",
+    "compile": "simplyimport bundle -d --umd notify src/index.coffee > dist/subnotices.js",
     "minify": "closure-service dist/subnotices.js > dist/subnotices.min.js",
     "watch": "simplywatch -g 'src/*' -x 'npm run compile -s'"
   },
@@ -17,11 +18,12 @@
     "closure-compiler-service": "^0.5.0",
     "coffee-script": "^1.10.0",
     "json": "^9.0.4",
-    "simplyimport": "*",
-    "simplywatch": "*",
+    "simplyimport": "^4.0.0-s35",
+    "simplywatch": "^3.0.0-l2",
     "uglify": "*"
   },
   "dependencies": {
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "smart-extend": "^1.7.3"
   }
 }
