--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "postversion": "npm run build && git add . && git commit -m '[Build]'",
     "postpublish": "git push",
     "build": "npm run compile && npm run minify",
-    "compile": "simplyimport bundle -d --umd notify src/index.coffee > dist/subnotices.debug.js",
+    "compile": "simplyimport bundle -d --umd subnotify src/index.coffee > dist/subnotices.debug.js",
     "minify": "closure-service dist/subnotices.debug.js > dist/subnotices.js",
     "watch": "simplywatch -g 'src/*' -x 'npm run compile -s'"
   },
